--- a/css/contact.css
+++ b/css/contact.css
@@ -1,18 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Mitr&display=swap");
+@import url("https://use.typekit.net/uhe1zjk.css");
 
 h1 {
   position: absolute;
-  transform: rotate(90deg);
-  left: -22.5%;
-  bottom: 22%;
-  font-size: 41px;
-  font-weight: bold;
+  transform: translateX(5%) rotate(90deg);
+  transform-origin: left;
+  left: 0;
+  bottom: 55%;
+  font-size: 51px;
+  font-family: motiva-sans, sans-serif;
+  font-weight: 900;
+  font-style: normal;
 }
 
 h2 {
-  font-family: montserrat;
-  font-weight: bold;
-  font-size: 40px;
+  font-family: motiva-sans, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 45px;
   color: transparent;
   background-image: url("/illustrations/sparkles.gif");
   -webkit-background-clip: text;
@@ -31,7 +36,6 @@ main {
 }
 
 #textContact {
-  margin-left: 10%;
   padding: 1em;
 }
 
@@ -64,6 +68,7 @@ input {
   margin-left: 0;
   background-color: white;
   font-size: 16px;
+  margin-top: 1em;
 }
 
 #form1Btn:hover {
