--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Mitr&display=swap");
 @import url("https://use.typekit.net/uhe1zjk.css");
 
+/* From base CSS */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 0em 4em;
+}
+
+/* Navigation link colors */
+
+nav ul li a {
+  color: black;
+}
+
 h1 {
   position: absolute;
   transform: translateX(5%) rotate(90deg);
   transform-origin: left;
-  left: 0;
+  left: 1%;
   bottom: 55%;
   font-size: 51px;
   font-family: motiva-sans, sans-serif;
@@ -32,7 +46,7 @@ p {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 5em;
+  padding: 0em 5em;
 }
 
 #textContact {
@@ -66,16 +80,14 @@ input {
 #form1Btn {
   padding: 0.8em 3em;
   margin-left: 0;
-  background-color: white;
+  background: url("/illustrations/sparkles.gif") no-repeat;
   font-size: 16px;
   margin-top: 1em;
+  color: white;
 }
 
 #form1Btn:hover {
-  background: url("/illustrations/sparkles.gif") no-repeat;
   cursor: pointer;
-  color: white;
-  text-shadow: black;
 }
 
 .d-flex {
