--- a/css/contact.css
+++ b/css/contact.css
@@ -49,6 +49,14 @@ main {
   padding: 0em 5em;
 }
 
+body {
+  margin: 0;
+}
+
+.homeBtn {
+  display: none;
+}
+
 #textContact {
   padding: 1em;
 }
@@ -108,4 +116,70 @@ textarea {
   max-width: 80%;
   max-height: 100px;
   resize: vertical;
+}
+
+/* Media queries */
+
+@media only screen and (max-width: 1150px) {
+  header {
+    margin: 0em;
+  }
+}
+
+@media only screen and (max-width: 940px) {
+  nav ul li a {
+    color: black;
+  }
+
+  body {
+    background-position: center 56px;
+    background-size: 140vh;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+  }
+
+  #logo {
+    max-width: 4rem;
+    float: left;
+    margin-left: 0;
+  }
+
+  #fpContainer1 {
+    grid-template-columns: 1fr;
+    margin-top: 26em;
+  }
+
+  p {
+    max-width: 40ch;
+  }
+
+  #card1,
+  #card2,
+  #card3 {
+    width: 40vw;
+    height: 40vw;
+    background-size: 40vw;
+  }
+
+  .fpSubContainer1 {
+    justify-self: center;
+  }
+
+  .fpContainer2 {
+    grid-template-columns: 1fr;
+    margin: 2em;
+  }
+
+  #normaPhoto {
+    width: 22em;
+    justify-self: center;
+    margin-right: 0em;
+    margin-bottom: 3em;
+    border: 5px solid white;
+  }
+  #fpContactBtn {
+    margin-top: 3em;
+    cursor: pointer;
+    justify-self: center;
+  }
 }
