--- a/css/contact.css
+++ b/css/contact.css
@@ -1,24 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Mitr&display=swap");
 @import url("https://use.typekit.net/uhe1zjk.css");
 
-/* From base CSS */
-
-header {
-  display: flex;
-  justify-content: space-between;
-  margin: 0em 4em;
-}
-
-/* Navigation link colors */
-
-nav ul li a {
-  color: black;
-}
-
-.homeBtn {
-  display: none;
-}
-
 h1 {
   position: absolute;
   transform: translateX(5%) rotate(90deg);
@@ -37,7 +19,8 @@ h2 {
   font-style: normal;
   font-size: 45px;
   color: transparent;
-  background-image: url("/illustrations/sparkles.gif");
+  padding-top: 1em;
+  background-image: url("../illustrations/sparkles.gif");
   -webkit-background-clip: text;
 }
 
@@ -50,7 +33,7 @@ p {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0em 5em;
+  padding: 10em 5em;
 }
 
 body {
@@ -92,7 +75,7 @@ input {
 #form1Btn {
   padding: 0.8em 3em;
   margin-left: 0;
-  background: url("/illustrations/sparkles.gif") no-repeat;
+  background: url("../illustrations/sparkles.gif") no-repeat;
   font-size: 16px;
   margin-top: 1em;
   color: white;
@@ -197,5 +180,19 @@ textarea {
 
   .d-flex {
     flex-direction: column;
+  }
+  h1 {
+    font-size: 41px;
+  }
+  h2 {
+    font-size: 35px;
+  }
+
+  main {
+    padding: 2em;
+  }
+
+  #textContact {
+    padding-bottom: 2em;
   }
 }
